# McuTemplateLibrary

./: CMakeLists.txt
include/mtl/: Typelist.hpp  TypelistAlgorithms.hpp  Utils.hpp
tests/: CMakeLists.txt  algorithms.cpp  typelist.cpp  utils.cpp
